Fix overflow removing height vh

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    height: 100vh;
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
